# python-clean-architecture-boilerplate

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  ROADMAP.md  pyproject.toml  semgrep.yml
.github/workflows/: ci.yml
src/core/: metadata.py
src/core/config/: logger.py  settings.py
src/entrypoints/: cli.py
tests/: test_initial.py
